# geometry-assistant

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
archive/: legacy-localhost-preview.md
assets/: template.html
references/: data-format.md
scripts/: deploy.py
src/geometry_assistant/: __init__.py  cli.py  core.py
